Added price per route functionality
